<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Label.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/extra_medium_text_size"/>

            <TextView
                style="@style/Label.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/greetings_to_user"
                android:textSize="@dimen/medium_text_size"/>

            <include layout="@layout/strip"/>

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/mandatory_data"/>


            <RadioGroup
                android:id="@+id/rg_male_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </RadioGroup>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_choose_target"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_hint="@string/choose_target"/>

            <android.support.design.widget.TextInputLayout
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:paddingTop="@dimen/medium_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optional_data"
                android:textSize="@dimen/medium_text_size"/>

            <android.support.design.widget.TextInputLayout
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fat_percent"
                android:paddingTop="@dimen/medium_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_fat_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:paddingTop="@dimen/medium_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:paddingTop="@dimen/medium_padding">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/submit"
                android:id="@+id/btn_submit"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>